--- a/BookListApp/Base.lproj/Main.storyboard
+++ b/BookListApp/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -41,10 +42,77 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <segue destination="M22-Wb-p2o" kind="presentation" identifier="showBookModal" destinationCreationSelector="showBookModal:" id="eZa-OH-kWd"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rv9-GW-K9C" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="931.88405797101461" y="168.75"/>
+        </scene>
+        <!--Book View Controller-->
+        <scene sceneID="ovt-Kc-fM4">
+            <objects>
+                <viewController id="M22-Wb-p2o" customClass="BookViewController" customModule="BookListApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="XSO-wt-PZa">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Hqe-ij-hIa">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="300"/>
+                                <color key="backgroundColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="300" id="ise-1D-Yc5"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="tLZ-2Z-C4a">
+                                <rect key="frame" x="20.5" y="320" width="373" height="139"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2ML-yt-V1T">
+                                        <rect key="frame" x="0.0" y="0.0" width="373" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="name of the book" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4gm-Rg-a8G">
+                                        <rect key="frame" x="0.0" y="30.5" width="373" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CIH-25-fx4">
+                                        <rect key="frame" x="0.0" y="74.5" width="373" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="name of the author" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Zoe-fa-vu3">
+                                        <rect key="frame" x="0.0" y="105" width="373" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="tLZ-2Z-C4a" firstAttribute="width" secondItem="XSO-wt-PZa" secondAttribute="width" multiplier="0.9" id="LPX-b0-o2V"/>
+                            <constraint firstItem="Hqe-ij-hIa" firstAttribute="leading" secondItem="gdv-w9-8b8" secondAttribute="leading" id="fet-cM-OQy"/>
+                            <constraint firstItem="tLZ-2Z-C4a" firstAttribute="top" secondItem="Hqe-ij-hIa" secondAttribute="bottom" constant="20" id="lFi-Ku-tiW"/>
+                            <constraint firstItem="gdv-w9-8b8" firstAttribute="trailing" secondItem="Hqe-ij-hIa" secondAttribute="trailing" id="rYS-US-1hW"/>
+                            <constraint firstItem="tLZ-2Z-C4a" firstAttribute="centerX" secondItem="gdv-w9-8b8" secondAttribute="centerX" id="wVh-pP-8Jv"/>
+                            <constraint firstItem="Hqe-ij-hIa" firstAttribute="top" secondItem="gdv-w9-8b8" secondAttribute="top" id="zlV-0w-wiV"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="gdv-w9-8b8"/>
+                    </view>
+                    <connections>
+                        <outlet property="bookAuthorTextField" destination="Zoe-fa-vu3" id="bak-v9-pNv"/>
+                        <outlet property="bookCoverImageView" destination="Hqe-ij-hIa" id="sz2-NT-nET"/>
+                        <outlet property="bookNameTextField" destination="4gm-Rg-a8G" id="dcm-r7-RhS"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hrK-8A-04U" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2002.8985507246377" y="167.41071428571428"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="rmM-y6-Lve">
