--- a/BookListApp/Base.lproj/Main.storyboard
+++ b/BookListApp/Base.lproj/Main.storyboard
@@ -58,49 +58,78 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Hqe-ij-hIa">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Hqe-ij-hIa" customClass="AsyncImageView" customModule="BookListApp" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="300"/>
                                 <color key="backgroundColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="300" id="ise-1D-Yc5"/>
                                 </constraints>
                             </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="tLZ-2Z-C4a">
-                                <rect key="frame" x="20.5" y="320" width="373" height="139"/>
+                            <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kqV-20-yjT">
+                                <rect key="frame" x="167" y="110.5" width="80" height="79"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="kqV-20-yjT" secondAttribute="height" multiplier="1:1" id="i7P-VM-XMU"/>
+                                    <constraint firstAttribute="width" constant="80" id="wPW-ZW-whC"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" backgroundImage="camera.circle.fill" catalog="system"/>
+                                <connections>
+                                    <action selector="pickImageButtonTapped:" destination="M22-Wb-p2o" eventType="touchUpInside" id="EGe-3E-He3"/>
+                                </connections>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="tLZ-2Z-C4a">
+                                <rect key="frame" x="20.5" y="320" width="373" height="223"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2ML-yt-V1T">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nombre" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2ML-yt-V1T">
                                         <rect key="frame" x="0.0" y="0.0" width="373" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="name of the book" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4gm-Rg-a8G">
-                                        <rect key="frame" x="0.0" y="30.5" width="373" height="34"/>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="nombre del libro" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4gm-Rg-a8G">
+                                        <rect key="frame" x="0.0" y="36.5" width="373" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CIH-25-fx4">
-                                        <rect key="frame" x="0.0" y="74.5" width="373" height="20.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Autor" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CIH-25-fx4">
+                                        <rect key="frame" x="0.0" y="86.5" width="373" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="name of the author" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Zoe-fa-vu3">
-                                        <rect key="frame" x="0.0" y="105" width="373" height="34"/>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="nombre del autor" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Zoe-fa-vu3">
+                                        <rect key="frame" x="0.0" y="123" width="373" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LMF-HJ-Rhm">
+                                        <rect key="frame" x="0.0" y="173" width="373" height="50"/>
+                                        <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="L3Y-wg-WBf"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <state key="normal" title="Guardar">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="saveButtonTapped:" destination="M22-Wb-p2o" eventType="touchUpInside" id="UHF-F1-XDc"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="tLZ-2Z-C4a" firstAttribute="width" secondItem="XSO-wt-PZa" secondAttribute="width" multiplier="0.9" id="LPX-b0-o2V"/>
-                            <constraint firstItem="Hqe-ij-hIa" firstAttribute="leading" secondItem="gdv-w9-8b8" secondAttribute="leading" id="fet-cM-OQy"/>
+                            <constraint firstItem="kqV-20-yjT" firstAttribute="centerX" secondItem="Hqe-ij-hIa" secondAttribute="centerX" id="Ygz-pf-6wr"/>
+                            <constraint firstItem="Hqe-ij-hIa" firstAttribute="leading" secondItem="XSO-wt-PZa" secondAttribute="leading" id="fet-cM-OQy"/>
+                            <constraint firstItem="kqV-20-yjT" firstAttribute="centerY" secondItem="Hqe-ij-hIa" secondAttribute="centerY" id="glW-tF-4t0"/>
                             <constraint firstItem="tLZ-2Z-C4a" firstAttribute="top" secondItem="Hqe-ij-hIa" secondAttribute="bottom" constant="20" id="lFi-Ku-tiW"/>
-                            <constraint firstItem="gdv-w9-8b8" firstAttribute="trailing" secondItem="Hqe-ij-hIa" secondAttribute="trailing" id="rYS-US-1hW"/>
+                            <constraint firstAttribute="trailing" secondItem="Hqe-ij-hIa" secondAttribute="trailing" id="rYS-US-1hW"/>
                             <constraint firstItem="tLZ-2Z-C4a" firstAttribute="centerX" secondItem="gdv-w9-8b8" secondAttribute="centerX" id="wVh-pP-8Jv"/>
-                            <constraint firstItem="Hqe-ij-hIa" firstAttribute="top" secondItem="gdv-w9-8b8" secondAttribute="top" id="zlV-0w-wiV"/>
+                            <constraint firstItem="Hqe-ij-hIa" firstAttribute="top" secondItem="XSO-wt-PZa" secondAttribute="top" id="zlV-0w-wiV"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="gdv-w9-8b8"/>
                     </view>
@@ -133,4 +162,7 @@
             <point key="canvasLocation" x="21.739130434782609" y="168.75"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="camera.circle.fill" catalog="system" width="64" height="60"/>
+    </resources>
 </document>
